--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -46,6 +46,9 @@ advertisedAddress=
 # Name of the cluster to which this broker belongs to
 clusterName=
 
+# Enable cluster's failure-domain which can distribute brokers into logical region
+failureDomainsEnabled=false
+
 # Zookeeper session timeout in milliseconds
 zooKeeperSessionTimeoutMillis=30000
 
