--- a/pulsar-client-tools/pom.xml
+++ b/pulsar-client-tools/pom.xml
@@ -60,7 +60,7 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>pulsar-client</artifactId>
+			<artifactId>pulsar-client-original</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
