Use unshaded jar in the pulsar-websocket

--- a/pulsar-client-kafka-compat/pulsar-client-kafka/pom.xml
+++ b/pulsar-client-kafka-compat/pulsar-client-kafka/pom.xml
@@ -95,6 +95,7 @@
               <artifactSet>
                 <includes>
                   <include>org.apache.kafka:kafka-clients</include>
+                  <include>org.apache.pulsar:pulsar-client</include>
                 </includes>
               </artifactSet>
               <relocations>
