--- a/pulsar-websocket/pom.xml
+++ b/pulsar-websocket/pom.xml
@@ -47,7 +47,7 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-client</artifactId>
+      <artifactId>pulsar-client-original</artifactId>
       <version>${project.version}</version>
     </dependency>
 
