Introduce auto bundle split and unloading of split bundle in ModularLoadManager

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -330,6 +330,9 @@ loadBalancerBrokerComfortLoadLevelPercentage=65
 # enable/disable namespace bundle auto split
 loadBalancerAutoBundleSplitEnabled=false
 
+# enable/disable automatic unloading of split bundles
+loadBalancerAutoUnloadSplitBundlesEnabled=false
+
 # maximum topics in a bundle, otherwise bundle split will be triggered
 loadBalancerNamespaceBundleMaxTopics=1000
 
