Allow to configure the default number of bundles for new namespaces

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -85,6 +85,9 @@ brokerDeduplicationEntriesInterval=1000
 # relative to a disconnected producer. Default is 6 hours.
 brokerDeduplicationProducerInactivityTimeoutMinutes=360
 
+# When a namespace is created without specifying the number of bundle, this
+# value will be used as the default
+defaultNumberOfNamespaceBundles=16
 
 # Enable check for minimum allowed client library version
 clientLibraryVersionCheckEnabled=false
