Allow to configure the default number of bundles for new namespaces (#854)

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -85,6 +85,9 @@ brokerDeduplicationEntriesInterval=1000
 # relative to a disconnected producer. Default is 6 hours.
 brokerDeduplicationProducerInactivityTimeoutMinutes=360
 
+# When a namespace is created without specifying the number of bundle, this
+# value will be used as the default
+defaultNumberOfNamespaceBundles=4
 
 # Enable check for minimum allowed client library version
 clientLibraryVersionCheckEnabled=false
@@ -260,7 +263,7 @@ managedLedgerMaxUnackedRangesToPersist=10000
 
 # Max number of "acknowledgment holes" that can be stored in Zookeeper. If number of unack message range is higher
 # than this limit then broker will persist unacked ranges into bookkeeper to avoid additional data overhead into
-# zookeeper.  
+# zookeeper.
 managedLedgerMaxUnackedRangesToPersistInZooKeeper=1000
 
 
