address PR update config-value + keep deprecated config in broker.conf

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -311,10 +311,10 @@ loadBalancerHostUsageCheckIntervalMinutes=1
 
 # Load shedding interval. Broker periodically checks whether some traffic should be offload from
 # some over-loaded broker to other under-loaded brokers
-loadBalancerSheddingIntervalMinutes=10
+loadBalancerSheddingIntervalMinutes=5
 
 # Prevent the same topics to be shed and moved to other broker more that once within this timeframe
-loadBalancerSheddingGracePeriodMinutes=20
+loadBalancerSheddingGracePeriodMinutes=30
 
 # Interval to flush dynamic resource quota to ZooKeeper
 loadBalancerResourceQuotaUpdateIntervalMinutes=15
@@ -332,7 +332,7 @@ loadBalancerNamespaceBundleMaxTopics=1000
 loadBalancerNamespaceBundleMaxSessions=1000
 
 # maximum msgRate (in + out) in a bundle, otherwise bundle split will be triggered
-loadBalancerNamespaceBundleMaxMsgRate=5000
+loadBalancerNamespaceBundleMaxMsgRate=30000
 
 # maximum bandwidth (in + out) in a bundle, otherwise bundle split will be triggered
 loadBalancerNamespaceBundleMaxBandwidthMbytes=100
@@ -342,6 +342,18 @@ loadBalancerNamespaceMaximumBundles=128
 
 # Name of load manager to use
 loadManagerClassName=org.apache.pulsar.broker.loadbalance.impl.ModularLoadManagerImpl
+
+# load placement strategy[weightedRandomSelection/leastLoadedServer] (only used by SimpleLoadManagerImpl)
+loadBalancerPlacementStrategy=leastLoadedServer
+
+# Usage threshold to determine a broker as under-loaded (only used by SimpleLoadManagerImpl)
+loadBalancerBrokerUnderloadedThresholdPercentage=50
+
+# Usage threshold to determine a broker as over-loaded (only used by SimpleLoadManagerImpl)
+loadBalancerBrokerOverloadedThresholdPercentage=85
+
+# Usage threshold to determine a broker is having just right level of load (only used by SimpleLoadManagerImpl)
+loadBalancerBrokerComfortLoadLevelPercentage=65
 
 ### --- Replication --- ###
 
