--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -272,9 +272,6 @@ managedLedgerMaxUnackedRangesToPersistInZooKeeper=1000
 # Enable load balancer
 loadBalancerEnabled=false
 
-# Strategy to assign a new bundle
-loadBalancerPlacementStrategy=weightedRandomSelection
-
 # Percentage of change to trigger load report update
 loadBalancerReportUpdateThresholdPercentage=10
 
@@ -286,28 +283,19 @@ loadBalancerHostUsageCheckIntervalMinutes=1
 
 # Load shedding interval. Broker periodically checks whether some traffic should be offload from
 # some over-loaded broker to other under-loaded brokers
-loadBalancerSheddingIntervalMinutes=30
+loadBalancerSheddingIntervalMinutes=5
 
 # Prevent the same topics to be shed and moved to other broker more that once within this timeframe
 loadBalancerSheddingGracePeriodMinutes=30
 
-# Usage threshold to determine a broker as under-loaded
-loadBalancerBrokerUnderloadedThresholdPercentage=1
-
-# Usage threshold to determine a broker as over-loaded
-loadBalancerBrokerOverloadedThresholdPercentage=85
-
-# Interval to update namespace bundle resource quotat
+# Interval to flush dynamic resource quota to ZooKeeper
 loadBalancerResourceQuotaUpdateIntervalMinutes=15
 
-# Usage threshold to determine a broker is having just right level of load
-loadBalancerBrokerComfortLoadLevelPercentage=65
-
 # enable/disable namespace bundle auto split
-loadBalancerAutoBundleSplitEnabled=false
+loadBalancerAutoBundleSplitEnabled=true
 
 # enable/disable automatic unloading of split bundles
-loadBalancerAutoUnloadSplitBundlesEnabled=false
+loadBalancerAutoUnloadSplitBundlesEnabled=true
 
 # maximum topics in a bundle, otherwise bundle split will be triggered
 loadBalancerNamespaceBundleMaxTopics=1000
@@ -316,7 +304,7 @@ loadBalancerNamespaceBundleMaxTopics=1000
 loadBalancerNamespaceBundleMaxSessions=1000
 
 # maximum msgRate (in + out) in a bundle, otherwise bundle split will be triggered
-loadBalancerNamespaceBundleMaxMsgRate=1000
+loadBalancerNamespaceBundleMaxMsgRate=30000
 
 # maximum bandwidth (in + out) in a bundle, otherwise bundle split will be triggered
 loadBalancerNamespaceBundleMaxBandwidthMbytes=100
