Fixed typo and right sidebar on Encryption.md

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -368,7 +368,7 @@ defaultRetentionTimeInMinutes=0
 # Default retention size
 defaultRetentionSizeInMB=0
 
-# How often to check cms connection is still alive
+# How often to check whether the connections are still alive
 keepAliveIntervalSeconds=30
 
 # How often broker checks for inactive topics to be deleted (topics with no subscriptions and no one connected)
