--- a/pulsar-proxy/pom.xml
+++ b/pulsar-proxy/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.pulsar</groupId>
     <artifactId>pulsar</artifactId>
-    <version>1.21.0-incubating-SNAPSHOT</version>
+    <version>1.21.0-incubating</version>
   </parent>
 
   <artifactId>pulsar-proxy</artifactId>
