add admin-api doc for peer-clusters

--- a/site/_data/cli/pulsar-admin.yaml
+++ b/site/_data/cli/pulsar-admin.yaml
@@ -102,6 +102,9 @@ commands:
     argument: cluster-name
   - name: list
     description: List the existing clusters
+  - name: update-peer-clusters
+    description: Update peer cluster names
+    argument: peer-cluster-names
 - name: namespaces
   description: Operations about namespaces
   subcommands:
