Upgrade to bk-4.3.1.83-yahoo to expose journalSyncData option

--- a/conf/bookkeeper.conf
+++ b/conf/bookkeeper.conf
@@ -142,6 +142,14 @@ journalWriteBufferSizeKB=64
 # Should we remove pages from page cache after force write
 journalRemoveFromPageCache=true
 
+# Should the data be fsynced on journal before acknowledgment.
+# By default, data sync is enabled to guarantee durability of writes.
+# Beware: while disabling data sync in the Bookie journal might improve the bookie write performance, it will also
+# introduce the possibility of data loss. With no sync, the journal entries are written in the OS page cache but
+# not flushed to disk. In case of power failure, the affected bookie might lose the unflushed data. If the ledger
+# is replicated to multiple bookies, the chances of data loss are reduced though still present.
+journalSyncData=true
+
 # Should we group journal force writes, which optimize group commit
 # for higher throughput
 journalAdaptiveGroupWrites=true
