add new doc and add doc to sidebar.yaml

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -33,6 +33,8 @@ groups:
 - title: Deployment
   dir: deployment
   docs:
+  - title: Deploy using Ansible
+    endpoint: bare-metal/ansible
   - title: Deploying on bare metal
     endpoint: InstanceSetup
   - title: Pulsar on Kubernetes
