begin adding section on AWS resource usage

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -33,7 +33,7 @@ groups:
 - title: Deployment
   dir: deployment
   docs:
-  - title: Deploy using Ansible
+  - title: Deploy on AWS using Ansible
     endpoint: bare-metal/ansible
   - title: Deploying on bare metal
     endpoint: InstanceSetup
