--- a/pulsar-client/src/main/resources/ahc.properties
+++ b/pulsar-client/src/main/resources/ahc.properties
@@ -32,19 +32,22 @@ org.apache.pulsar.shade.org.asynchttpclient.connectionTtl=-1
 org.apache.pulsar.shade.org.asynchttpclient.followRedirect=false
 org.apache.pulsar.shade.org.asynchttpclient.maxRedirects=5
 org.apache.pulsar.shade.org.asynchttpclient.compressionEnforced=false
-org.apache.pulsar.shade.org.asynchttpclient.userAgent=AHC/2.0
+org.apache.pulsar.shade.org.asynchttpclient.userAgent=AHC/2.1
 org.apache.pulsar.shade.org.asynchttpclient.enabledProtocols=TLSv1.2, TLSv1.1, TLSv1
-org.apache.pulsar.shade.org.asynchttpclient.enabledCipherSuites=TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA
+org.apache.pulsar.shade.org.asynchttpclient.enabledCipherSuites=
 org.apache.pulsar.shade.org.asynchttpclient.useProxySelector=false
 org.apache.pulsar.shade.org.asynchttpclient.useProxyProperties=false
 org.apache.pulsar.shade.org.asynchttpclient.validateResponseHeaders=true
+org.apache.pulsar.shade.org.asynchttpclient.aggregateWebSocketFrameFragments=true
 org.apache.pulsar.shade.org.asynchttpclient.strict302Handling=false
 org.apache.pulsar.shade.org.asynchttpclient.keepAlive=true
 org.apache.pulsar.shade.org.asynchttpclient.maxRequestRetry=5
 org.apache.pulsar.shade.org.asynchttpclient.disableUrlEncodingForBoundRequests=false
+org.apache.pulsar.shade.org.asynchttpclient.useLaxCookieEncoder=false
 org.apache.pulsar.shade.org.asynchttpclient.removeQueryParamOnRedirect=true
 org.apache.pulsar.shade.org.asynchttpclient.useOpenSsl=false
-org.apache.pulsar.shade.org.asynchttpclient.acceptAnyCertificate=false
+org.apache.pulsar.shade.org.asynchttpclient.useInsecureTrustManager=false
+org.apache.pulsar.shade.org.asynchttpclient.disableHttpsEndpointIdentificationAlgorithm=false
 org.apache.pulsar.shade.org.asynchttpclient.sslSessionCacheSize=0
 org.apache.pulsar.shade.org.asynchttpclient.sslSessionTimeout=0
 org.apache.pulsar.shade.org.asynchttpclient.tcpNoDelay=true
@@ -55,6 +58,7 @@ org.apache.pulsar.shade.org.asynchttpclient.soRcvBuf=-1
 org.apache.pulsar.shade.org.asynchttpclient.httpClientCodecMaxInitialLineLength=4096
 org.apache.pulsar.shade.org.asynchttpclient.httpClientCodecMaxHeaderSize=8192
 org.apache.pulsar.shade.org.asynchttpclient.httpClientCodecMaxChunkSize=8192
+org.apache.pulsar.shade.org.asynchttpclient.httpClientCodecInitialBufferSize=128
 org.apache.pulsar.shade.org.asynchttpclient.disableZeroCopy=false
 org.apache.pulsar.shade.org.asynchttpclient.handshakeTimeout=10000
 org.apache.pulsar.shade.org.asynchttpclient.chunkedFileChunkSize=8192
