more progress on file template conversion and installation scripts

--- a/deployment/terraform-ansible/templates/bookkeeper.conf
+++ b/deployment/terraform-ansible/templates/bookkeeper.conf
@@ -18,9 +18,9 @@
 #
 
 
-zkServers={{ zookeeperServers }}
+zkServers=${zookeeper_servers}
 
-advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
+advertisedAddress=${advertised_address}
 
 # Use multiple journals to better exploit SSD throughput
 journalDirectories=/mnt/journal/1,/mnt/journal/2,/mnt/journal/3,/mnt/journal/4
