--- a/deployment/terraform-ansible/templates/zoo.cfg
+++ b/deployment/terraform-ansible/templates/zoo.cfg
@@ -44,6 +44,8 @@ autopurge.snapRetainCount=3
 # Set to "0" to disable auto purge feature
 autopurge.purgeInterval=1
 
-{% for zk in groups['zookeeper'] %}
-server.{{ hostvars[zk].zid }}={{ hostvars[zk].private_ip }}:2888:3888
-{% endfor %}
+${zookeeper_servers}
+
+#{% for zk in groups['zookeeper'] %}
+#server.{{ hostvars[zk].zid }}={{ hostvars[zk].private_ip }}:2888:3888
+#{% endfor %}
