separate TF logic into different files

--- a/deployment/terraform-ansible/templates/broker.conf
+++ b/deployment/terraform-ansible/templates/broker.conf
@@ -28,7 +28,7 @@ zookeeperServers=${zookeeper_servers}
 globalZookeeperServers=${zookeeper_servers}
 
 # Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
-advertisedAddress=${ip}
+advertisedAddress=${advertised_address}
 
 # Name of the cluster to which this broker belongs to
 clusterName=local
