revert templates to initial logic

--- a/deployment/terraform-ansible/templates/broker.conf
+++ b/deployment/terraform-ansible/templates/broker.conf
@@ -22,13 +22,13 @@
 ### Use all the broker defaults except for the following
 
 # Zookeeper quorum connection string
-zookeeperServers=${zookeeper_servers}
+zookeeperServers={{ zookeeperServers }}
 
 # Global Zookeeper quorum connection string
-globalZookeeperServers=${zookeeper_servers}
+globalZookeeperServers={{ zookeeperServers }}
 
 # Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
-advertisedAddress=${advertised_address}
+advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
 
 # Name of the cluster to which this broker belongs to
 clusterName=local
