--- a/deployment/terraform-ansible/templates/bookkeeper.conf
+++ b/deployment/terraform-ansible/templates/bookkeeper.conf
@@ -18,7 +18,7 @@
 #
 
 
-zkServers={{ zookeeperServers }}
+zkServers={{ zookeeper_servers }}
 
 advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
 
