--- a/deployment/terraform-ansible/templates/broker.conf
+++ b/deployment/terraform-ansible/templates/broker.conf
@@ -22,10 +22,10 @@
 ### Use all the broker defaults except for the following
 
 # Zookeeper quorum connection string
-zookeeperServers={{ zookeeperServers }}
+zookeeperServers={{ zookeeper_servers }}
 
 # Global Zookeeper quorum connection string
-globalZookeeperServers={{ zookeeperServers }}
+globalZookeeperServers={{ zookeeper_servers }}
 
 # Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
 advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
