add second mount to script

--- a/deployment/terraform-ansible/ansible.cfg
+++ b/deployment/terraform-ansible/ansible.cfg
@@ -1,2 +1,9 @@
 [defaults]
 private_key_file=~/.ssh/id_rsa
+host_key_checking=false
+
+[privilege_escalation]
+become=True
+become_method='sudo'
+become_user='root'
+become_ask_pass=False
