--- a/deployment/terraform-ansible/deploy-pulsar.yaml
+++ b/deployment/terraform-ansible/deploy-pulsar.yaml
@@ -23,15 +23,18 @@
   become: true
   tasks:
     - shell: >
-        tuned-adm profile latency-performance &&
+        sudo tuned-adm profile latency-performance &&
+        mkfs.xfs -f /dev/nvme0n1 &&
+        mkfs.xfs -f /dev/nvme1n1 &&
         mkdir -p /mnt/journal &&
         mkdir -p /mnt/storage &&
-        mkfs.xfs /dev/nvme0n1 &&
-        mkfs.xfs /dev/nvme1n1 &&
         mount -o defaults,noatime,nodiscard,nobarrier /dev/nvme0n1 /mnt/journal &&
         mount -o defaults,noatime,nodiscard,nobarrier /dev/nvme1n1 /mnt/storage
       args:
-        creates: /mnt/journal
+        creates:
+          - /mnt/journal
+          - /mnt/storage
+
 
 - name: Pulsar setup
   hosts: all
