--- a/deployment/terraform-ansible/deploy-pulsar.yaml
+++ b/deployment/terraform-ansible/deploy-pulsar.yaml
@@ -55,13 +55,11 @@
         http_url: "http://{{ hostvars[groups['pulsar'][0]].private_ip }}:8080/"
         pulsar_version: "1.20.0-incubating"
 
-    - get_url:
-        url: http://apache.mirrors.hoobly.com/incubator/pulsar/pulsar-{{ pulsar_version }}/apache-pulsar-{{ pulsar_version }}-bin.tar.gz
-        dest: /tmp/pulsar.tgz
-    - command: tar --strip-components=1 -xvf /tmp/pulsar.tgz
-      args:
-        chdir: /opt/pulsar
-
+    - unarchive:
+        src: http://apache.mirrors.hoobly.com/incubator/pulsar/pulsar-{{ pulsar_version }}/apache-pulsar-{{ pulsar_version }}-bin.tar.gz
+        remote_src: no
+        dest: /opt/pulsar
+        extra_opts: ["--strip-components=1"]
     - set_fact:
         private_ip: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
         max_heap_memory: "24g"
