Create pulsar-functions module (#1)
* Create pulsar-functions module

* rename `sdk` package to `api`

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,8 @@ flexible messaging model and an intuitive client API.</description>
     <module>docker</module>
     <module>tests</module>
     <module>pulsar-log4j2-appender</module>
+    <!-- functions related modules -->
+    <module>pulsar-functions</module>
   </modules>
 
   <issueManagement>
