--- a/pom.xml
+++ b/pom.xml
@@ -678,6 +678,7 @@ flexible messaging model and an intuitive client API.</description>
             </goals>
             <configuration>
               <outputFile>target/classpath.txt</outputFile>
+              <includeScope>runtime</includeScope>
             </configuration>
           </execution>
         </executions>
